src/MiniJava/MiniJavaParser.cpp

// Generated from D:/ÎÄµµ/ÎÒÔÚFDU/MiniJavaCompilerProject/src\MiniJava.g4 by ANTLR 4.6


#include "MiniJavaListener.h"
#include "MiniJavaVisitor.h"

#include "MiniJavaParser.h"


using namespace antlrcpp;
using namespace MiniJava;
using namespace antlr4;

MiniJavaParser::MiniJavaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MiniJavaParser::~MiniJavaParser() {
  delete _interpreter;
}

std::string MiniJavaParser::getGrammarFileName() const {
  return "MiniJava.g4";
}

const std::vector<std::string>& MiniJavaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MiniJavaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- GoalContext ------------------------------------------------------------------

MiniJavaParser::GoalContext::GoalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniJavaParser::MainClassContext* MiniJavaParser::GoalContext::mainClass() {
  return getRuleContext<MiniJavaParser::MainClassContext>(0);
}

tree::TerminalNode* MiniJavaParser::GoalContext::EOF() {
  return getToken(MiniJavaParser::EOF, 0);
}

std::vector<MiniJavaParser::ClassDeclarationContext *> MiniJavaParser::GoalContext::classDeclaration() {
  return getRuleContexts<MiniJavaParser::ClassDeclarationContext>();
}

MiniJavaParser::ClassDeclarationContext* MiniJavaParser::GoalContext::classDeclaration(size_t i) {
  return getRuleContext<MiniJavaParser::ClassDeclarationContext>(i);
}


size_t MiniJavaParser::GoalContext::getRuleIndex() const {
  return MiniJavaParser::RuleGoal;
}

void MiniJavaParser::GoalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGoal(this);
}

void MiniJavaParser::GoalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGoal(this);
}


antlrcpp::Any MiniJavaParser::GoalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitGoal(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::GoalContext* MiniJavaParser::goal() {
  GoalContext *_localctx = _tracker.createInstance<GoalContext>(_ctx, getState());
  enterRule(_localctx, 0, MiniJavaParser::RuleGoal);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    mainClass();
    setState(30);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__0)
      | (1ULL << MiniJavaParser::T__2)
      | (1ULL << MiniJavaParser::T__12)
      | (1ULL << MiniJavaParser::T__13))) != 0)) {
      setState(27);
      classDeclaration();
      setState(32);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(33);
    match(MiniJavaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainClassContext ------------------------------------------------------------------

MiniJavaParser::MainClassContext::MainClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MiniJavaParser::MainClassContext::ID() {
  return getTokens(MiniJavaParser::ID);
}

tree::TerminalNode* MiniJavaParser::MainClassContext::ID(size_t i) {
  return getToken(MiniJavaParser::ID, i);
}

MiniJavaParser::StmtBlockContext* MiniJavaParser::MainClassContext::stmtBlock() {
  return getRuleContext<MiniJavaParser::StmtBlockContext>(0);
}


size_t MiniJavaParser::MainClassContext::getRuleIndex() const {
  return MiniJavaParser::RuleMainClass;
}

void MiniJavaParser::MainClassContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainClass(this);
}

void MiniJavaParser::MainClassContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainClass(this);
}


antlrcpp::Any MiniJavaParser::MainClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitMainClass(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::MainClassContext* MiniJavaParser::mainClass() {
  MainClassContext *_localctx = _tracker.createInstance<MainClassContext>(_ctx, getState());
  enterRule(_localctx, 2, MiniJavaParser::RuleMainClass);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(35);
    match(MiniJavaParser::T__0);
    setState(36);
    match(MiniJavaParser::ID);
    setState(37);
    match(MiniJavaParser::T__1);
    setState(38);
    match(MiniJavaParser::T__2);
    setState(39);
    match(MiniJavaParser::T__3);
    setState(40);
    match(MiniJavaParser::T__4);
    setState(41);
    match(MiniJavaParser::T__5);
    setState(42);
    match(MiniJavaParser::T__6);
    setState(43);
    match(MiniJavaParser::T__7);
    setState(44);
    match(MiniJavaParser::T__8);
    setState(45);
    match(MiniJavaParser::T__9);
    setState(46);
    match(MiniJavaParser::ID);
    setState(47);
    match(MiniJavaParser::T__10);
    setState(48);
    stmtBlock();
    setState(49);
    match(MiniJavaParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PermissionDescContext ------------------------------------------------------------------

MiniJavaParser::PermissionDescContext::PermissionDescContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniJavaParser::PermissionDescContext::getRuleIndex() const {
  return MiniJavaParser::RulePermissionDesc;
}

void MiniJavaParser::PermissionDescContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPermissionDesc(this);
}

void MiniJavaParser::PermissionDescContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPermissionDesc(this);
}


antlrcpp::Any MiniJavaParser::PermissionDescContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitPermissionDesc(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::PermissionDescContext* MiniJavaParser::permissionDesc() {
  PermissionDescContext *_localctx = _tracker.createInstance<PermissionDescContext>(_ctx, getState());
  enterRule(_localctx, 4, MiniJavaParser::RulePermissionDesc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__2)
      | (1ULL << MiniJavaParser::T__12)
      | (1ULL << MiniJavaParser::T__13))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclarationContext ------------------------------------------------------------------

MiniJavaParser::ClassDeclarationContext::ClassDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> MiniJavaParser::ClassDeclarationContext::ID() {
  return getTokens(MiniJavaParser::ID);
}

tree::TerminalNode* MiniJavaParser::ClassDeclarationContext::ID(size_t i) {
  return getToken(MiniJavaParser::ID, i);
}

MiniJavaParser::PermissionDescContext* MiniJavaParser::ClassDeclarationContext::permissionDesc() {
  return getRuleContext<MiniJavaParser::PermissionDescContext>(0);
}

std::vector<MiniJavaParser::DeclarationContext *> MiniJavaParser::ClassDeclarationContext::declaration() {
  return getRuleContexts<MiniJavaParser::DeclarationContext>();
}

MiniJavaParser::DeclarationContext* MiniJavaParser::ClassDeclarationContext::declaration(size_t i) {
  return getRuleContext<MiniJavaParser::DeclarationContext>(i);
}


size_t MiniJavaParser::ClassDeclarationContext::getRuleIndex() const {
  return MiniJavaParser::RuleClassDeclaration;
}

void MiniJavaParser::ClassDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDeclaration(this);
}

void MiniJavaParser::ClassDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDeclaration(this);
}


antlrcpp::Any MiniJavaParser::ClassDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitClassDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::ClassDeclarationContext* MiniJavaParser::classDeclaration() {
  ClassDeclarationContext *_localctx = _tracker.createInstance<ClassDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 6, MiniJavaParser::RuleClassDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__2)
      | (1ULL << MiniJavaParser::T__12)
      | (1ULL << MiniJavaParser::T__13))) != 0)) {
      setState(53);
      permissionDesc();
    }
    setState(56);
    match(MiniJavaParser::T__0);
    setState(57);
    match(MiniJavaParser::ID);
    setState(60);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == MiniJavaParser::T__14) {
      setState(58);
      match(MiniJavaParser::T__14);
      setState(59);
      match(MiniJavaParser::ID);
    }
    setState(62);
    match(MiniJavaParser::T__1);
    setState(66);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__2)
      | (1ULL << MiniJavaParser::T__12)
      | (1ULL << MiniJavaParser::T__13)
      | (1ULL << MiniJavaParser::T__17)
      | (1ULL << MiniJavaParser::T__18))) != 0) || _la == MiniJavaParser::ID) {
      setState(63);
      declaration();
      setState(68);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(69);
    match(MiniJavaParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

MiniJavaParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniJavaParser::VarDeclarationContext* MiniJavaParser::DeclarationContext::varDeclaration() {
  return getRuleContext<MiniJavaParser::VarDeclarationContext>(0);
}

MiniJavaParser::MethodDeclarationContext* MiniJavaParser::DeclarationContext::methodDeclaration() {
  return getRuleContext<MiniJavaParser::MethodDeclarationContext>(0);
}


size_t MiniJavaParser::DeclarationContext::getRuleIndex() const {
  return MiniJavaParser::RuleDeclaration;
}

void MiniJavaParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void MiniJavaParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}


antlrcpp::Any MiniJavaParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::DeclarationContext* MiniJavaParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 8, MiniJavaParser::RuleDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(71);
      varDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(72);
      methodDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

MiniJavaParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniJavaParser::TypeContext* MiniJavaParser::VarDeclarationContext::type() {
  return getRuleContext<MiniJavaParser::TypeContext>(0);
}

tree::TerminalNode* MiniJavaParser::VarDeclarationContext::ID() {
  return getToken(MiniJavaParser::ID, 0);
}


size_t MiniJavaParser::VarDeclarationContext::getRuleIndex() const {
  return MiniJavaParser::RuleVarDeclaration;
}

void MiniJavaParser::VarDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclaration(this);
}

void MiniJavaParser::VarDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclaration(this);
}


antlrcpp::Any MiniJavaParser::VarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitVarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::VarDeclarationContext* MiniJavaParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, MiniJavaParser::RuleVarDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    type();
    setState(76);
    match(MiniJavaParser::ID);
    setState(77);
    match(MiniJavaParser::T__15);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MethodDeclarationContext ------------------------------------------------------------------

MiniJavaParser::MethodDeclarationContext::MethodDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MiniJavaParser::TypeContext *> MiniJavaParser::MethodDeclarationContext::type() {
  return getRuleContexts<MiniJavaParser::TypeContext>();
}

MiniJavaParser::TypeContext* MiniJavaParser::MethodDeclarationContext::type(size_t i) {
  return getRuleContext<MiniJavaParser::TypeContext>(i);
}

std::vector<tree::TerminalNode *> MiniJavaParser::MethodDeclarationContext::ID() {
  return getTokens(MiniJavaParser::ID);
}

tree::TerminalNode* MiniJavaParser::MethodDeclarationContext::ID(size_t i) {
  return getToken(MiniJavaParser::ID, i);
}

MiniJavaParser::StmtBlockContext* MiniJavaParser::MethodDeclarationContext::stmtBlock() {
  return getRuleContext<MiniJavaParser::StmtBlockContext>(0);
}

MiniJavaParser::PermissionDescContext* MiniJavaParser::MethodDeclarationContext::permissionDesc() {
  return getRuleContext<MiniJavaParser::PermissionDescContext>(0);
}


size_t MiniJavaParser::MethodDeclarationContext::getRuleIndex() const {
  return MiniJavaParser::RuleMethodDeclaration;
}

void MiniJavaParser::MethodDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMethodDeclaration(this);
}

void MiniJavaParser::MethodDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMethodDeclaration(this);
}


antlrcpp::Any MiniJavaParser::MethodDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitMethodDeclaration(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::MethodDeclarationContext* MiniJavaParser::methodDeclaration() {
  MethodDeclarationContext *_localctx = _tracker.createInstance<MethodDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 12, MiniJavaParser::RuleMethodDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__2)
      | (1ULL << MiniJavaParser::T__12)
      | (1ULL << MiniJavaParser::T__13))) != 0)) {
      setState(79);
      permissionDesc();
    }
    setState(82);
    type();
    setState(83);
    match(MiniJavaParser::ID);
    setState(84);
    match(MiniJavaParser::T__6);
    setState(96);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 18) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 18)) & ((1ULL << (MiniJavaParser::T__17 - 18))
      | (1ULL << (MiniJavaParser::T__18 - 18))
      | (1ULL << (MiniJavaParser::ID - 18)))) != 0)) {
      setState(85);
      type();
      setState(86);
      match(MiniJavaParser::ID);
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == MiniJavaParser::T__16) {
        setState(87);
        match(MiniJavaParser::T__16);
        setState(88);
        type();
        setState(89);
        match(MiniJavaParser::ID);
        setState(95);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
    }
    setState(98);
    match(MiniJavaParser::T__10);
    setState(99);
    stmtBlock();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

MiniJavaParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MiniJavaParser::TypeContext::ID() {
  return getToken(MiniJavaParser::ID, 0);
}


size_t MiniJavaParser::TypeContext::getRuleIndex() const {
  return MiniJavaParser::RuleType;
}

void MiniJavaParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void MiniJavaParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any MiniJavaParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::TypeContext* MiniJavaParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 14, MiniJavaParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(101);
      match(MiniJavaParser::T__17);
      setState(102);
      match(MiniJavaParser::T__8);
      setState(103);
      match(MiniJavaParser::T__9);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(104);
      match(MiniJavaParser::T__18);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(105);
      match(MiniJavaParser::T__17);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(106);
      match(MiniJavaParser::ID);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtBlockContext ------------------------------------------------------------------

MiniJavaParser::StmtBlockContext::StmtBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MiniJavaParser::StmtContext *> MiniJavaParser::StmtBlockContext::stmt() {
  return getRuleContexts<MiniJavaParser::StmtContext>();
}

MiniJavaParser::StmtContext* MiniJavaParser::StmtBlockContext::stmt(size_t i) {
  return getRuleContext<MiniJavaParser::StmtContext>(i);
}


size_t MiniJavaParser::StmtBlockContext::getRuleIndex() const {
  return MiniJavaParser::RuleStmtBlock;
}

void MiniJavaParser::StmtBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtBlock(this);
}

void MiniJavaParser::StmtBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtBlock(this);
}


antlrcpp::Any MiniJavaParser::StmtBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitStmtBlock(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::StmtBlockContext* MiniJavaParser::stmtBlock() {
  StmtBlockContext *_localctx = _tracker.createInstance<StmtBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, MiniJavaParser::RuleStmtBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(MiniJavaParser::T__1);
    setState(113);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__1)
      | (1ULL << MiniJavaParser::T__17)
      | (1ULL << MiniJavaParser::T__18)
      | (1ULL << MiniJavaParser::T__32)
      | (1ULL << MiniJavaParser::T__34)
      | (1ULL << MiniJavaParser::T__35)
      | (1ULL << MiniJavaParser::T__36))) != 0) || _la == MiniJavaParser::ID) {
      setState(110);
      stmt();
      setState(115);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(116);
    match(MiniJavaParser::T__11);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignSymContext ------------------------------------------------------------------

MiniJavaParser::AssignSymContext::AssignSymContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t MiniJavaParser::AssignSymContext::getRuleIndex() const {
  return MiniJavaParser::RuleAssignSym;
}

void MiniJavaParser::AssignSymContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignSym(this);
}

void MiniJavaParser::AssignSymContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignSym(this);
}


antlrcpp::Any MiniJavaParser::AssignSymContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MiniJavaVisitor*>(visitor))
    return parserVisitor->visitAssignSym(this);
  else
    return visitor->visitChildren(this);
}

MiniJavaParser::AssignSymContext* MiniJavaParser::assignSym() {
  AssignSymContext *_localctx = _tracker.createInstance<AssignSymContext>(_ctx, getState());
  enterRule(_localctx, 18, MiniJavaParser::RuleAssignSym);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MiniJavaParser::T__19)
      | (1ULL << MiniJavaParser::T__20)
      | (1ULL << MiniJavaParser::T__21)
      | (1ULL << MiniJavaParser::T__22)
      | (1ULL << MiniJavaParser::T__23)
      | (1ULL << MiniJavaParser::T__24)
      | (1ULL << MiniJavaParser::T__25)
      | (1ULL << MiniJavaParser::T__26)
      | (1ULL << MiniJavaParser::T__27)
      | (1ULL << MiniJavaParser::T__28)
      | (1ULL << MiniJavaParser::T__29)
      | (1ULL << MiniJavaParser::T__30)
      | (1ULL << MiniJavaParser::T__31))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

MiniJavaParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MiniJavaParser::VarDeclarationContext* MiniJavaParser::StmtContext::varDeclaration() {
  return getRuleContext<MiniJavaParser::VarDeclarationContext>(0);
}

MiniJavaParser::StmtBlockContext* MiniJavaParser::StmtContext::stmtBlock() {
  return getRuleContext<MiniJavaParser::StmtBlockContext>(0);
}

std::vector<MiniJavaParser::ExpContext *> MiniJavaParser::StmtContext::exp() {
  return getRuleContexts<MiniJavaParser::ExpContext>();
}

MiniJavaParser::ExpContext* MiniJavaParser::StmtContext::exp(size_t i) {
  return getRuleContext<MiniJavaParser::ExpContext>(i);
}

std::vector<MiniJavaParser::StmtContext *> MiniJavaParser::StmtContext::stmt() {
  return getRuleContexts<MiniJavaParser::StmtContext>();
}

MiniJavaParser::StmtContext* MiniJavaParser::StmtContext::stmt(size_t i) {
  return getRuleContext<MiniJavaParser::StmtContext>(i);
}

tree::TerminalNode* MiniJavaParser::StmtContext::ID() {
  return getToken(MiniJavaParser::ID, 0);
}

MiniJavaParser::AssignSymContext* MiniJavaParser::StmtContext::assignSym() {
  return getRuleContext<MiniJavaParser::AssignSymContext>(0);
}


size_t MiniJavaParser::StmtContext::getRuleIndex() const {
  return MiniJavaParser::RuleStmt;
}

void MiniJavaParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MiniJavaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}
